--- a/config.ini
+++ b/config.ini
@@ -7,11 +7,16 @@ url = https://customer.jira.telekom.de/rest/raven/1.0/import/execution
 [JIRA_API_ISSUE]
 url = https://customer.jira.telekom.de/rest/api/2/issue
 
+[JIRA_API_JQL_SEARCH]
+url = https://customer.jira.telekom.de/rest/api/2/search
+
 [STATUS]
 passed = PASS
 aborted = ABORTED
 failed = FAIL
 
+[MAXIMUM_JQL_SEARCH_TEST_CASES]
+max = 300
 
 [CONTENT_TYPE]
 content_type = application/json
