--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,14 @@
 [JIRA]
-url = https://customer.jira.telekom.de
+url = https://jira.telekom.de
 
 [XRAY_API_TEST_STATUS_UPDATE]
-url = https://customer.jira.telekom.de/rest/raven/1.0/import/execution
+url = https://jira.telekom.de/rest/raven/1.0/import/execution
 
 [JIRA_API_ISSUE]
-url = https://customer.jira.telekom.de/rest/api/2/issue
+url = https://jira.telekom.de/rest/api/2/issue
 
 [JIRA_API_JQL_SEARCH]
-url = https://customer.jira.telekom.de/rest/api/2/search
+url = https://jira.telekom.de/rest/api/2/search
 
 [STATUS]
 passed = PASS
